BradkenProduction/force-app/main/default/objects/Project__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>This fields holds the description of the Project</description>
    <inlineHelpText>Detailed Description of the Project</inlineHelpText>
    <label>Description</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>