BradkenProduction/force-app/main/default/objects/Project__c/fields/End_User__c.field-meta.xml
<CustomField>
    <fullName>End_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>End Customer / Client for whom the Project is created</description>
    <inlineHelpText>End Customer/Client for the Project</inlineHelpText>
    <label>End User</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>