BradkenProduction/force-app/main/default/objects/Project__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If the Project is active, it can be selected when creating an Opportunity.</description>
    <inlineHelpText>Is the Project active?</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>