BradkenProduction/force-app/main/default/objects/Project__c/fields/Most_Probable_Opportunity_Present__c.field-meta.xml
<CustomField>
    <fullName>Most_Probable_Opportunity_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether most probable opportunity is present on the Project</description>
    <inlineHelpText>Is there any opportunity marked as Most Probable on this Project</inlineHelpText>
    <label>Most Probable Opportunity Present</label>
    <type>Checkbox</type>
</CustomField>