BradkenProduction/force-app/main/default/objects/Project__c/listViews/Active_Projects.listView-meta.xml
<ListView>
    <fullName>Active_Projects</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>End_User__c</columns>
    <columns>IsActive__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsActive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Projects</label>
</ListView>